--- a/towns/lviv.html
+++ b/towns/lviv.html
@@ -34,7 +34,7 @@
             </a>
             <div class="dropdown-content">
               <a href="#">Львівська обл.</a>
-              <a href="#">Іванофранківська обл.</a>
+              <a href="#">Івано-Франківська обл.</a>
               <a href="#">Харківська обл.</a>
               <a href="#">Полтавська обл.</a>
               <a href="#">Донецька обл.</a>
@@ -60,7 +60,16 @@
 
 <section class="town">
     <div class="container">
+      <div class="town__block town__block-title">
+        <i class='bx bx-chevrons-right' style='color:#000'  ></i>
+        <h2 class="block-title--h2">Львівська область</h2>
+      </div>
+      <div class="town__block town__block-address">
 
+      </div>
+      <div class="town__block town__block-map">
+
+      </div>
     </div>
 </section>
 
