--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <i class='bx bx-chevron-down'></i>
             </a>
             <div class="dropdown-content">
-              <a href="/towns/lviv.html">Львівська обл.</a>
+              <a href="lviv.html">Львівська обл.</a>
               <a href="#">Іванофранківська обл.</a>
               <a href="#">Харківська обл.</a>
               <a href="#">Полтавська обл.</a>
