--- a/lviv.html
+++ b/lviv.html
@@ -61,14 +61,23 @@
 <section class="town">
     <div class="container">
       <div class="town__block town__block-title">
-        <i class='bx bx-chevrons-right' style='color:#000'  ></i>
+        <i class='bx bx-chevrons-right'></i>
         <h2 class="block-title--h2">Львівська область</h2>
       </div>
       <div class="town__block town__block-address">
-
+        <div class="town--address">
+          <div class="town__block-address--i">
+            <i class='bx bx-current-location'></i>
+          </div>
+          <p class="town__block-address--text">
+            Дільниця №5: 79040, м.Львів, вул.Городоцька, 359;
+          </p>
+        </div>
       </div>
-      <div class="town__block town__block-map">
-
+      <div class="town__block">
+        <div class="town__block-map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5046.605335837783!2d24.025515244287186!3d49.82138984421989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4722b69211a40507%3A0x7444796f6171588c!2s%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%BE%D1%86%D0%B8%D1%87%D0%BA%D0%B0,+359!5e0!3m2!1sru!2sua!4v1656102045707!5m2!1sru!2sua" width="550" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
       </div>
     </div>
 </section>
