--- a/donetsk.html
+++ b/donetsk.html
@@ -63,21 +63,54 @@
     <div class="container">
       <div class="town__block town__block-title">
         <i class='bx bx-chevrons-right'></i>
-        <h2 class="block-title--h2">Львівська область</h2>
+        <h2 class="block-title--h2">Донецька область</h2>
       </div>
+
       <div class="town__block town__block-address">
         <div class="town--address">
           <div class="town__block-address--i">
             <i class='bx bx-current-location'></i>
           </div>
           <p class="town__block-address--text">
-            Дільниця №5: 79040, м.Львів, вул.Городоцька, 359;
+            Дільниця №7: 85103, Донецька обл., м. Константинівка, вул. Соборності, 1;
           </p>
         </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/lviv.jpg" alt="image map">
+          <img src="/images/maps/donetsk7.jpg" alt="image map">
+        </div>
+      </div>
+
+      <div class="town__block town__block-address">
+        <div class="town--address">
+          <div class="town__block-address--i">
+            <i class='bx bx-current-location'></i>
+          </div>
+          <p class="town__block-address--text">
+            Дільниця №9: 85401, Донецька обл., м. Селидове, вул. Гоголя, 43;
+          </p>
+        </div>
+      </div>
+      <div class="town__block">
+        <div class="town__block-map">
+          <img src="/images/maps/donetsk9.jpg" alt="image map">
+        </div>
+      </div>
+
+      <div class="town__block town__block-address">
+        <div class="town--address">
+          <div class="town__block-address--i">
+            <i class='bx bx-current-location'></i>
+          </div>
+          <p class="town__block-address--text">
+            Дільниця №6: 84313, м. Краматорськ, вулиця Олекси Тихого, 8;
+          </p>
+        </div>
+      </div>
+      <div class="town__block">
+        <div class="town__block-map">
+          <img src="/images/maps/donetsk6.jpg" alt="image map">
         </div>
       </div>
     </div>
