--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
             </a>
             <div class="dropdown-content">
               <a href="lviv.html">Львівська обл.</a>
-              <a href="#">Іванофранківська обл.</a>
-              <a href="#">Харківська обл.</a>
-              <a href="#">Полтавська обл.</a>
-              <a href="#">Донецька обл.</a>
-              <a href="#">Хмельницька обл.</a>
-              <a href="#">Одеська обл.</a>
-              <a href="#">Чернігівська обл.</a>
+              <a href="ivfr.html">Івано-Франківська обл.</a>
+              <a href="kharkiv.html">Харківська обл.</a>
+              <a href="poltava.html">Полтавська обл.</a>
+              <a href="donetsk.html">Донецька обл.</a>
+              <a href="khmelnytskyi.html">Хмельницька обл.</a>
+              <a href="odessa.html">Одеська обл.</a>
+              <a href="chernihivska.html">Чернігівська обл.</a>
+              <a href="ternopilska.html">Тернопільська обл.</a>
           </div>
           </li>
         </ul>
