--- a/ivfr.html
+++ b/ivfr.html
@@ -63,21 +63,22 @@
     <div class="container">
       <div class="town__block town__block-title">
         <i class='bx bx-chevrons-right'></i>
-        <h2 class="block-title--h2">Львівська область</h2>
+        <h2 class="block-title--h2">Івано-Франківська область</h2>
       </div>
+
       <div class="town__block town__block-address">
         <div class="town--address">
           <div class="town__block-address--i">
             <i class='bx bx-current-location'></i>
           </div>
           <p class="town__block-address--text">
-            Дільниця №5: 79040, м.Львів, вул.Городоцька, 359;
+            Дільниця №6: 77300, Івано-Франківська область, м.Калуш, вул.Ринкова, 13А;
           </p>
         </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/lviv.jpg" alt="image map">
+          <img src="/images/maps/infr.jpg" alt="image map">
         </div>
       </div>
     </div>
