--- a/ternopilska.html
+++ b/ternopilska.html
@@ -63,23 +63,41 @@
     <div class="container">
       <div class="town__block town__block-title">
         <i class='bx bx-chevrons-right'></i>
-        <h2 class="block-title--h2">Львівська область</h2>
+        <h2 class="block-title--h2">Тернопільська область</h2>
       </div>
+
       <div class="town__block town__block-address">
         <div class="town--address">
           <div class="town__block-address--i">
             <i class='bx bx-current-location'></i>
           </div>
           <p class="town__block-address--text">
-            Дільниця №5: 79040, м.Львів, вул.Городоцька, 359;
+            Дільниця №4: 47724, Тернопільська обл., смт.Велика Березовиця, вул.Микулинецька, 129;
           </p>
         </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/lviv.jpg" alt="image map">
+          <img src="/images/maps/ternop4.jpg" alt="image map">
         </div>
       </div>
+
+      <div class="town__block town__block-address">
+        <div class="town--address">
+          <div class="town__block-address--i">
+            <i class='bx bx-current-location'></i>
+          </div>
+          <p class="town__block-address--text">
+            Дільниця №10: 48423, Тернопільська обл., Бучацький р-н, с.Підзамочок, вул.Тернопільська, будинок 82;
+          </p>
+        </div>
+      </div>
+      <div class="town__block">
+        <div class="town__block-map">
+          <img src="/images/maps/ternop10.jpg" alt="image map">
+        </div>
+      </div>
+
     </div>
 </section>
 
