--- a/kharkiv.html
+++ b/kharkiv.html
@@ -63,23 +63,73 @@
     <div class="container">
       <div class="town__block town__block-title">
         <i class='bx bx-chevrons-right'></i>
-        <h2 class="block-title--h2">Львівська область</h2>
+        <h2 class="block-title--h2">Харківськаа область</h2>
       </div>
+
       <div class="town__block town__block-address">
         <div class="town--address">
           <div class="town__block-address--i">
             <i class='bx bx-current-location'></i>
           </div>
           <p class="town__block-address--text">
-            Дільниця №5: 79040, м.Львів, вул.Городоцька, 359;
+            Дільниця №1.2: 61034, м. Харків, вул. Кашуби, 10;
           </p>
         </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/lviv.jpg" alt="image map">
+          <img src="/images/maps/kharkiv1.2.jpg" alt="image map">
         </div>
       </div>
+
+      <div class="town__block town__block-address">
+        <div class="town--address">
+          <div class="town__block-address--i">
+            <i class='bx bx-current-location'></i>
+          </div>
+          <p class="town__block-address--text">
+            Дільниця №1: 64305, Харківська обл. м. Ізюм, вул. Ентузіастів, 21а;
+          </p>
+        </div>
+      </div>
+      <div class="town__block">
+        <div class="town__block-map">
+          <img src="/images/maps/kharkiv1.jpg" alt="image map">
+        </div>
+      </div>
+
+      <div class="town__block town__block-address">
+        <div class="town--address">
+          <div class="town__block-address--i">
+            <i class='bx bx-current-location'></i>
+          </div>
+          <p class="town__block-address--text">
+            Дільниця №2: 62416, Харківська область, Харківський район, смт Пісочин, вул.Сімферопольська, 1б; 
+          </p>
+        </div>
+      </div>
+      <div class="town__block">
+        <div class="town__block-map">
+          <img src="/images/maps/kharkiv2.jpg" alt="image map">
+        </div>
+      </div>
+
+      <div class="town__block town__block-address">
+        <div class="town--address">
+          <div class="town__block-address--i">
+            <i class='bx bx-current-location'></i>
+          </div>
+          <p class="town__block-address--text">
+            Дільниця №4: 64423, Харківська обл., Красноградський р-н, с.Наталіне, вул.Святотроїцька, 16а;
+          </p>
+        </div>
+      </div>
+      <div class="town__block">
+        <div class="town__block-map">
+          <img src="/images/maps/kharkiv4.jpg" alt="image map">
+        </div>
+      </div>
+
     </div>
 </section>
 
