--- a/index.html
+++ b/index.html
@@ -285,6 +285,18 @@
       </div>
       <div class="reviews__item">
         <p class="reviews__title-name">
+          Атестат 1О417 10.04.2024
+        </p>
+          <br><a href="files/atestat10417.pdf" target="pdf"><span>Завантажити файл</span></a>
+      </div>
+      <div class="reviews__item">
+        <p class="reviews__title-name">
+          Сфера органу з сертифікації
+        </p>
+          <br><a href="files/sfera_organu.pdf" target="pdf"><span>Завантажити файл</span></a>
+      </div>
+      <div class="reviews__item">
+        <p class="reviews__title-name">
           Калькуляція вартості одного сертифіката відповідності щодо індивідуального затвердження колісного транспортного засобу
         </p>
           <br><a href="files/calculation.pdf" target="pdf"><span>Завантажити файл</span></a>
