--- a/kharkiv.html
+++ b/kharkiv.html
@@ -78,7 +78,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/kharkiv1.2.jpg" alt="image map">
+          <img src="images/maps/kharkiv1.2.jpg" alt="image map">
         </div>
       </div>
 
@@ -94,7 +94,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/kharkiv1.jpg" alt="image map">
+          <img src="images/maps/kharkiv1.jpg" alt="image map">
         </div>
       </div>
 
@@ -110,7 +110,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/kharkiv2.jpg" alt="image map">
+          <img src="images/maps/kharkiv2.jpg" alt="image map">
         </div>
       </div>
 
@@ -126,7 +126,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/kharkiv4.jpg" alt="image map">
+          <img src="images/maps/kharkiv4.jpg" alt="image map">
         </div>
       </div>
 
