--- a/lviv.html
+++ b/lviv.html
@@ -77,7 +77,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/lviv.jpg" alt="image map">
+          <img src="images/maps/lviv.jpg" alt="image map">
         </div>
       </div>
     </div>
