--- a/odessa.html
+++ b/odessa.html
@@ -78,7 +78,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/odessa12.jpg" alt="image map">
+          <img src="images/maps/odessa12.jpg" alt="image map">
         </div>
       </div>
 
