--- a/poltava.html
+++ b/poltava.html
@@ -78,7 +78,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/poltava3.jpg" alt="image map">
+          <img src="images/maps/poltava3.jpg" alt="image map">
         </div>
       </div>
 
