--- a/ternopilska.html
+++ b/ternopilska.html
@@ -78,7 +78,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/ternop4.jpg" alt="image map">
+          <img src="images/maps/ternop4.jpg" alt="image map">
         </div>
       </div>
 
@@ -94,7 +94,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/ternop10.jpg" alt="image map">
+          <img src="images/maps/ternop10.jpg" alt="image map">
         </div>
       </div>
 
