--- a/donetsk.html
+++ b/donetsk.html
@@ -78,7 +78,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/donetsk7.jpg" alt="image map">
+          <img src="images/maps/donetsk7.jpg" alt="image map">
         </div>
       </div>
 
@@ -94,7 +94,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/donetsk9.jpg" alt="image map">
+          <img src="images/maps/donetsk9.jpg" alt="image map">
         </div>
       </div>
 
@@ -110,7 +110,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/donetsk6.jpg" alt="image map">
+          <img src="images/maps/donetsk6.jpg" alt="image map">
         </div>
       </div>
     </div>
