--- a/ivfr.html
+++ b/ivfr.html
@@ -78,7 +78,7 @@
       </div>
       <div class="town__block">
         <div class="town__block-map">
-          <img src="/images/maps/infr.jpg" alt="image map">
+          <img src="images/maps/infr.jpg" alt="image map">
         </div>
       </div>
     </div>
