--- a/donetsk.html
+++ b/donetsk.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body__town">
   
 <header class="header">
   <div class="container">
@@ -65,6 +65,25 @@
         <i class='bx bx-chevrons-right'></i>
         <h2 class="block-title--h2">Донецька область</h2>
       </div>
+      <div class="town__block town__block-address">
+        <div class="town--address">
+          <div class="town__block-address--i">
+            <i class='bx bx-current-location'></i>
+          </div>
+          <p class="town__block-address--text">
+            Дільниця №6: 84313, м. Краматорськ, вулиця Олекси Тихого, 8;
+          </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
+        </div>
+      </div>
+      <div class="town__block">
+        <div class="town__block-map">
+          <img src="images/maps/donetsk6.jpg" alt="image map">
+        </div>
+      </div>
 
       <div class="town__block town__block-address">
         <div class="town--address">
@@ -74,6 +93,9 @@
           <p class="town__block-address--text">
             Дільниця №7: 85103, Донецька обл., м. Константинівка, вул. Соборності, 1;
           </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
         </div>
       </div>
       <div class="town__block">
@@ -91,6 +113,10 @@
             Дільниця №9: 85401, Донецька обл., м. Селидове, вул. Гоголя, 43;
           </p>
         </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
+        </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
@@ -98,21 +124,7 @@
         </div>
       </div>
 
-      <div class="town__block town__block-address">
-        <div class="town--address">
-          <div class="town__block-address--i">
-            <i class='bx bx-current-location'></i>
-          </div>
-          <p class="town__block-address--text">
-            Дільниця №6: 84313, м. Краматорськ, вулиця Олекси Тихого, 8;
-          </p>
-        </div>
-      </div>
-      <div class="town__block">
-        <div class="town__block-map">
-          <img src="images/maps/donetsk6.jpg" alt="image map">
-        </div>
-      </div>
+      
     </div>
 </section>
 
