--- a/ivfr.html
+++ b/ivfr.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body__town">
   
 <header class="header">
   <div class="container">
@@ -74,6 +74,9 @@
           <p class="town__block-address--text">
             Дільниця №6: 77300, Івано-Франківська область, м.Калуш, вул.Ринкова, 13А;
           </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
         </div>
       </div>
       <div class="town__block">
