--- a/khmelnytskyi.html
+++ b/khmelnytskyi.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body__town">
   
 <header class="header">
   <div class="container">
@@ -75,6 +75,10 @@
             Дільниця №1.1: 30500, Хмельницька обл., м.Полонне, вул. Лесі Українки, 3А;
           </p>
         </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
+        </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
@@ -90,6 +94,9 @@
           <p class="town__block-address--text">
             Дільниця №2: 32000, Хмельницька обл., с.Городок, вул.Станційна, 20-3;
           </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
         </div>
       </div>
       <div class="town__block">
@@ -107,6 +114,10 @@
             Дільниця №8: 31000, Хмельницька обл., м.Красилів, вул.Левадна, гараж №18;
           </p>
         </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
+        </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
@@ -122,6 +133,10 @@
           <p class="town__block-address--text">
             Дільниця №11: 29011, м. Хмельницький, вул. Вінницьке шосе, 12-1;
           </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
         </div>
       </div>
       <div class="town__block">
