--- a/odessa.html
+++ b/odessa.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body__town">
   
 <header class="header">
   <div class="container">
@@ -74,6 +74,10 @@
           <p class="town__block-address--text">
             Дільниця №12: 65031, м. Одеса, вул. Проценка, 52-1;
           </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
         </div>
       </div>
       <div class="town__block">
