--- a/poltava.html
+++ b/poltava.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body__town">
   
 <header class="header">
   <div class="container">
@@ -75,13 +75,16 @@
             Дільниця №3: 37240, Полтавська обл., Лохвицький район, м.Заводське, вул.Вишнева, буд. 11в;
           </p>
         </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
+        </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
           <img src="images/maps/poltava3.jpg" alt="image map">
         </div>
       </div>
-
     </div>
 </section>
 
