--- a/ternopilska.html
+++ b/ternopilska.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body__town">
   
 <header class="header">
   <div class="container">
@@ -75,6 +75,9 @@
             Дільниця №4: 47724, Тернопільська обл., смт.Велика Березовиця, вул.Микулинецька, 129;
           </p>
         </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+        </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
@@ -91,13 +94,16 @@
             Дільниця №10: 48423, Тернопільська обл., Бучацький р-н, с.Підзамочок, вул.Тернопільська, будинок 82;
           </p>
         </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
+        </div>
       </div>
       <div class="town__block">
         <div class="town__block-map">
           <img src="images/maps/ternop10.jpg" alt="image map">
         </div>
-      </div>
-
+      </div>     
     </div>
 </section>
 
