--- a/kharkiv.html
+++ b/kharkiv.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body__town">
   
 <header class="header">
   <div class="container">
@@ -72,8 +72,31 @@
             <i class='bx bx-current-location'></i>
           </div>
           <p class="town__block-address--text">
+            Дільниця №1: 64305, Харківська обл. м. Ізюм, вул. Ентузіастів, 21а;
+          </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+        </div>
+      </div>
+      <div class="town__block">
+        <div class="town__block-map">
+          <img src="images/maps/kharkiv1.jpg" alt="image map">
+        </div>
+      </div>
+      
+      <div class="town__block town__block-address">
+        <div class="town--address">
+          <div class="town__block-address--i">
+            <i class='bx bx-current-location'></i>
+          </div>
+          <p class="town__block-address--text">
             Дільниця №1.2: 61034, м. Харків, вул. Кашуби, 10;
           </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
         </div>
       </div>
       <div class="town__block">
@@ -88,24 +111,12 @@
             <i class='bx bx-current-location'></i>
           </div>
           <p class="town__block-address--text">
-            Дільниця №1: 64305, Харківська обл. м. Ізюм, вул. Ентузіастів, 21а;
-          </p>
-        </div>
-      </div>
-      <div class="town__block">
-        <div class="town__block-map">
-          <img src="images/maps/kharkiv1.jpg" alt="image map">
-        </div>
-      </div>
-
-      <div class="town__block town__block-address">
-        <div class="town--address">
-          <div class="town__block-address--i">
-            <i class='bx bx-current-location'></i>
-          </div>
-          <p class="town__block-address--text">
             Дільниця №2: 62416, Харківська область, Харківський район, смт Пісочин, вул.Сімферопольська, 1б; 
           </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
         </div>
       </div>
       <div class="town__block">
@@ -122,6 +133,10 @@
           <p class="town__block-address--text">
             Дільниця №4: 64423, Харківська обл., Красноградський р-н, с.Наталіне, вул.Святотроїцька, 16а;
           </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
+          <p>фірма: ТОВ «ТЕХКОНТРОЛЬ «СВІТА»</p>
         </div>
       </div>
       <div class="town__block">
