--- a/lviv.html
+++ b/lviv.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body__town">
   
 <header class="header">
   <div class="container">
@@ -73,6 +73,9 @@
           <p class="town__block-address--text">
             Дільниця №5: 79040, м.Львів, вул.Городоцька, 359;
           </p>
+        </div>
+        <div class="address__company-name">
+          <p>фірма: ТОВ «СІТІ ДРАЙВ 2019»</p>
         </div>
       </div>
       <div class="town__block">
