--- a/kharkiv.html
+++ b/kharkiv.html
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="town__block town__block-title">
         <i class='bx bx-chevrons-right'></i>
-        <h2 class="block-title--h2">Харківськаа область</h2>
+        <h2 class="block-title--h2">Харківська область</h2>
       </div>
 
       <div class="town__block town__block-address">
