--- a/index.html
+++ b/index.html
@@ -325,6 +325,9 @@
         <p class="feedback__text">
           тел. +380 99 007 07 97
         </p>
+        <p class="feedback__text">
+          @mail: tksvita17@gmail.com
+        </p>
 
 <!--        <input class="feedback__input" type="text" placeholder="Ім'я">-->
 <!--        <input class="feedback__input" type="text" placeholder="Тлф">-->
