--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@
     </div>
   </div>
 </section>
+<section class="search">
+  <div class="container">
+    <div class="search__inner">
+      <div class="search__title">
+        <h3>Пошук автомобіля по vin-коду</h3>
+      </div>
+      <div class="search__block">
+        <div class="search__button">
+          <p class="search__button-text">vin ...</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <section class="rent">
   <div class="container">
     <div class="rent__inner">
