--- a/index.html
+++ b/index.html
@@ -80,16 +80,19 @@
           <img src="images/slider2.png" alt="" class="top__slider-images">
         </div>
         <div class="top__slider-item">
-          <img src="images/slider3.jpg" alt="" class="top__slider-images">
+          <img src="images/slider3.png" alt="" class="top__slider-images">
         </div>
         <div class="top__slider-item">
-          <img src="images/slider4.png" alt="" class="top__slider-images">
+          <img src="images/slider4.jpg" alt="" class="top__slider-images">
         </div>
         <div class="top__slider-item">
           <img src="images/slider5.png" alt="" class="top__slider-images">
         </div>
+        <div class="top__slider-item">
+          <img src="images/slider6.jpg" alt="" class="top__slider-images">
+        </div>
         <!-- <div class="top__slider-item">
-          <img src="images/slider1.jpg" alt="" class="top__slider-images">
+          <img src="images/slider7.jpg" alt="" class="top__slider-images">
         </div> -->
       </div>
     </div>
