--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <div class="container">
     <div class="search__inner">
       <div class="search__title">
-        <h3>Пошук автомобіля по vin-коду</h3>
+        <h3>Пошук сертифіката по vin - коду</h3>
       </div>
       <div class="search__block">
         <div class="search__button">
